docs: Fix typo in notebook

--- a/Personalysis.ipynb
+++ b/Personalysis.ipynb
@@ -241,7 +241,7 @@
    "source": [
     "We ended up with 41 factors, which isn't far off from the [AB5C personality test](http://ipip.ori.org/newab5ckey.htm) that purports to have 45. So the technique seems to work!\n",
     "\n",
-    "But I think there's a way we can improve this further. Perhaps we should prioritize factors that are orthagonal to the ones we've already discovered. So if the 1st factor is the \"cry during movies\" factor, the 2nd one should be one that has a near-zero correlation with the 1st."
+    "But I think there's a way we can improve this further. Perhaps we should prioritize factors that are orthogonal to the ones we've already discovered. So if the 1st factor is the \"cry during movies\" factor, the 2nd one should be one that has a near-zero correlation with the 1st."
    ]
   },
   {
