feat: Add new method for identifying traits
Method 2 prioritizes traits that are uncorrelated with the last one discovered.

Still needs improvement, but it's working for now.

--- a/Personalysis.ipynb
+++ b/Personalysis.ipynb
@@ -81,36 +81,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iinsultpeople\n",
-      "iseldomnoticedetails\n",
-      "iseldomgetlostinthought\n",
-      "iusemybrain\n",
-      "ifollowdirections\n",
-      "itrytooutdoothers\n",
-      "iseldomgetlostinthought\n",
-      "iprefervarietytoroutine\n",
-      "iamquicktojudgeothers\n",
-      "iampreciseinmywork\n",
-      "idontmindeatingalone\n",
-      "iamdeeplymovedbyothersmisfortunes\n",
-      "ispendtimereflectingonthings\n",
-      "isenseotherswishes\n",
-      "icantcomeupwithnewideas\n",
-      "iameasilyfrightened\n",
-      "ispendtimereflectingonthings\n",
-      "isticktotherules\n",
-      "iretreatfromothers\n",
-      "iamnotasstrictasishouldbe\n",
-      "idontgetexcitedaboutthings\n",
-      "igeteasilyagitated\n",
-      "iseekdanger\n",
-      "idontmindeatingalone\n",
-      "itaketimeoutforothers\n",
-      "ineversplurge\n",
-      "igetaheadstartonothers\n",
-      "iamnotsurewheremylifeisgoing\n",
-      "imakewellconsidereddecisions\n",
-      "ihavecryingfits\n"
+      "ineedtounderstandmymotives\n",
+      "ihaveexcellentideas\n",
+      "ineverspendmorethanicanafford\n",
+      "iliketoactonawhim\n",
+      "iamopenaboutmyselftoothers\n",
+      "idontcareaboutdressingnicely\n",
+      "ihatetoseempushy\n",
+      "icherishmementos\n",
+      "ilistentomyconscience\n",
+      "ihavedifficultyexpressingmyfeelings\n",
+      "ireassureothers\n",
+      "ichallengeotherspointsofview\n",
+      "ifeellittleconcernforothers\n",
+      "ifeelothersemotions\n",
+      "iliketolaughoutloud\n",
+      "iknowtheanswerstomanyquestions\n",
+      "iamnotdisturbedbyevents\n",
+      "idontcareaboutdressingnicely\n",
+      "iamnotaveryenthusiasticperson\n",
+      "ikeepmycool\n",
+      "imakesurethatrulesarefollowed\n",
+      "iputoffunpleasanttasks\n",
+      "ilookdownonanyweakness\n",
+      "ihaveexcellentideas\n",
+      "igetfurious\n",
+      "ikeepmyemotionsundercontrol\n",
+      "igomyownway\n",
+      "iamoftenlatetowork\n",
+      "ispeakloudly\n",
+      "idontseethingsthrough\n"
      ]
     }
    ],
@@ -246,13 +246,361 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# TODO: Find factors orthogonally"
+    "def uncorrelated(col, df=data, threshold=100):\n",
+    "    '''Similar to absolute_correlations, but now finds uncorrelated items'''\n",
+    "    corrs = pd.DataFrame(df.select_dtypes(include=[np.number]).corrwith(df[col]), columns=['correlation'])\n",
+    "    corrs['absol'] = np.abs(corrs['correlation'])\n",
+    "    \n",
+    "    # Default is to return all items sorted by correlation (ascending)\n",
+    "    return corrs[corrs.absol < threshold].sort_values('absol', ascending=True).drop('absol', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try this manually first so we can figure out what the code should do"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done. Final question was: ialwaysknowwhatiamdoing\n",
+      "Processed 512 questions\n"
+     ]
+    }
+   ],
+   "source": [
+    "# start with the most controversial question\n",
+    "questions_orth = ['icryduringmovies']\n",
+    "question = 'icryduringmovies'\n",
+    "\n",
+    "while True:\n",
+    "    unrelated = uncorrelated(\n",
+    "        question, df=data[[i for i in data.columns if i not in questions_orth] + [question]]\n",
+    "    )\n",
+    "    try:\n",
+    "        question = unrelated.index[0]\n",
+    "        if question in questions_orth:\n",
+    "            print('Done. Final question was:', question)\n",
+    "            break\n",
+    "        else:\n",
+    "            questions_orth.append(unrelated.index[0])\n",
+    "    except:\n",
+    "        break\n",
+    "\n",
+    "print('Processed', str(len(questions_orth)), 'questions')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This method isn't perfect; it's analogous to a \"greedy\" algorithm that takes the first value that works. I'm still experimenting with a method to find the question that correlates least with *all* discovered traits.\n",
+    "\n",
+    "But let's continue on with our orthogonal questions list!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found 30 personality traits\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "# Record which questions go in each factor\n",
+    "factors = defaultdict(list)\n",
+    "\n",
+    "# Use each question only once\n",
+    "questions_used = []\n",
+    "# Put users' scores in a dataframe\n",
+    "df_factors = pd.DataFrame()\n",
+    "\n",
+    "for question in questions_orth:\n",
+    "    if question not in questions_used:\n",
+    "        related = absolute_correlations(\n",
+    "            question,\n",
+    "            df=data[[i for i in data.columns if i not in questions_used]],\n",
+    "            threshold=.53 # trial and error. still need more data.\n",
+    "        )        \n",
+    "        if len(related) >= 4:\n",
+    "            for related_question in related.index:\n",
+    "                questions_used.append(related_question)\n",
+    "            factors[question].append(related.index)\n",
+    "            \n",
+    "            pos_items = related[related['correlation'] > 0].index\n",
+    "            neg_items = related[related['correlation'] < 0].index\n",
+    "            all_items = list(pos_items) + list(neg_items)   \n",
+    "\n",
+    "            df_factors[question] = (data[pos_items].sum(axis=1) + (8-data[neg_items]).sum(axis=1))/(.07*len(all_items))\n",
+    "            \n",
+    "print('found', str(df_factors.shape[1]), 'personality traits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. ibreakrules\n",
+      "- ibreakrules\n",
+      "- idontcareaboutrules\n",
+      "- idisregardrules\n",
+      "- isticktotherules\n",
+      "\n",
+      "2. igetthingsdonequickly\n",
+      "- igetthingsdonequickly\n",
+      "- ihandletaskssmoothly\n",
+      "- igetaheadstartonothers\n",
+      "- ithinkquickly\n",
+      "\n",
+      "3. idemandtobethecenterofinterest\n",
+      "- idemandtobethecenterofinterest\n",
+      "- imakemyselfthecenterofattention\n",
+      "- iliketoattractattention\n",
+      "- idemandattention\n",
+      "\n",
+      "4. idonttalkalot\n",
+      "- idonttalkalot\n",
+      "- italktoomuch\n",
+      "- iexpressmyselfeasily\n",
+      "- ihavelittletosay\n",
+      "\n",
+      "5. iamthelifeoftheparty\n",
+      "- iamthelifeoftheparty\n",
+      "- ienjoybeingpartofaloudcrowd\n",
+      "- iactwildandcrazy\n",
+      "- ilovelargeparties\n",
+      "\n",
+      "6. itakegoodcareofmybelongings\n",
+      "- itakegoodcareofmybelongings\n",
+      "- ikeepthingstidy\n",
+      "- iworkonimprovingmyself\n",
+      "- iliketotidyup\n",
+      "\n",
+      "7. ineedacreativeoutlet\n",
+      "- ineedacreativeoutlet\n",
+      "- ibelieveintheimportanceofart\n",
+      "- idonotenjoygoingtoartmuseums\n",
+      "- idonotlikepoetry\n",
+      "\n",
+      "8. iameasilymovedtotears\n",
+      "- iameasilymovedtotears\n",
+      "- icryeasily\n",
+      "- icryduringmovies\n",
+      "- ihavecryingfits\n",
+      "- iburstintotears\n",
+      "- idontlosemyhead\n",
+      "\n",
+      "9. iquicklygettheideaofthings\n",
+      "- iquicklygettheideaofthings\n",
+      "- iknowhowtoapplymyknowledge\n",
+      "- icaneasilylinkfactstogether\n",
+      "- ilovetoreadchallengingmaterial\n",
+      "\n",
+      "10. ineglectmyduties\n",
+      "- ineglectmyduties\n",
+      "- iignoremyresponsibilities\n",
+      "- iaccomplishmyworkontime\n",
+      "- idothingsatthelastminute\n",
+      "\n",
+      "11. iworkaccordingtoaroutine\n",
+      "- iworkaccordingtoaroutine\n",
+      "- idothingsaccordingtoaplan\n",
+      "- ifollowaschedule\n",
+      "- iwantthingstoproceedaccordingtoplan\n",
+      "- icarryoutmyplans\n",
+      "- iliketoplanahead\n",
+      "- ifollowthroughwithmyplans\n",
+      "- idonotplanahead\n",
+      "- ifollowdirections\n",
+      "- imakesurethatrulesarefollowed\n",
+      "- ithinkahead\n",
+      "\n",
+      "12. ifeelthreatenedeasily\n",
+      "- ifeelthreatenedeasily\n",
+      "- igetstressedouteasily\n",
+      "- iameasilyfrightened\n",
+      "- iamfilledwithdoubtsaboutthings\n",
+      "\n",
+      "13. itakecharge\n",
+      "- itakecharge\n",
+      "- iwaitforotherstoleadtheway\n",
+      "- iautomaticallytakecharge\n",
+      "- itrytoleadothers\n",
+      "- iseemyselfasagoodleader\n",
+      "\n",
+      "14. iamapersonwhosemoodsgoupanddowneasily\n",
+      "- iamapersonwhosemoodsgoupanddowneasily\n",
+      "- ichangemymoodalot\n",
+      "- ihavefrequentmoodswings\n",
+      "- igeteasilyagitated\n",
+      "\n",
+      "15. imakeothersfeelgood\n",
+      "- imakeothersfeelgood\n",
+      "- ihavealotoffun\n",
+      "- ifeelothersemotions\n",
+      "- iknowhowtocomfortothers\n",
+      "- iseebeautyinthingsthatothersmightnotnotice\n",
+      "- imakepeoplefeelatease\n",
+      "- ireassureothers\n",
+      "\n",
+      "16. ithinkdeeplyaboutthings\n",
+      "- ithinkdeeplyaboutthings\n",
+      "- ilovetoreflectonthings\n",
+      "- itendtoanalyzethings\n",
+      "- irarelylookforadeepermeaninginthings\n",
+      "- ispendtimereflectingonthings\n",
+      "- itaketimetoreflectonthings\n",
+      "- ilookforhiddenmeaningsinthings\n",
+      "- ienjoyexaminingmyselfandmylife\n",
+      "- itrytounderstandmyself\n",
+      "- iliketosolvecomplexproblems\n",
+      "\n",
+      "17. iamswayedbymyemotions\n",
+      "- iamswayedbymyemotions\n",
+      "- iamguidedbymymoods\n",
+      "- iexperiencemyemotionsintensely\n",
+      "- iamnoteasilyaffectedbymyemotions\n",
+      "- iameasilyhurt\n",
+      "- itakeoffenseeasily\n",
+      "- igetoverwhelmedbyemotions\n",
+      "\n",
+      "18. iliketobealone\n",
+      "- iliketobealone\n",
+      "- ienjoyspendingtimebymyself\n",
+      "- ienjoysilence\n",
+      "- iprefertobealone\n",
+      "- iseekquiet\n",
+      "- iwanttobeleftalone\n",
+      "\n",
+      "19. iamaveryprivateperson\n",
+      "- iamaveryprivateperson\n",
+      "- ikeepinthebackground\n",
+      "- ikeepmythoughtstomyself\n",
+      "- ikeepothersatadistance\n",
+      "\n",
+      "20. iamnoteasilystirred\n",
+      "- iamnoteasilystirred\n",
+      "- iamnoteasilyannoyed\n",
+      "- irarelygetirritated\n",
+      "- iameasilyoffended\n",
+      "- iameasilydisturbed\n",
+      "\n",
+      "21. ineedthingsexplainedonlyonce\n",
+      "- ineedthingsexplainedonlyonce\n",
+      "- ilearnquickly\n",
+      "- icanhandlealotofinformation\n",
+      "- iamquicktounderstandthings\n",
+      "\n",
+      "22. icanbestirredupupseteasily\n",
+      "- icanbestirredupupseteasily\n",
+      "- igetupseteasily\n",
+      "- igetangryeasily\n",
+      "- ilosemytemper\n",
+      "- iworryaboutthings\n",
+      "\n",
+      "23. iliketolaughoutloud\n",
+      "- iliketolaughoutloud\n",
+      "- ilaughalot\n",
+      "- iradiatejoy\n",
+      "- ilaughmywaythroughlife\n",
+      "\n",
+      "24. itakeaninterestinotherpeopleslives\n",
+      "- itakeaninterestinotherpeopleslives\n",
+      "- iaminterestedinpeople\n",
+      "- iamnotreallyinterestedinothers\n",
+      "- itaketimeoutforothers\n",
+      "\n",
+      "25. ishowmyfeelings\n",
+      "- ishowmyfeelings\n",
+      "- iamopenaboutmyfeelings\n",
+      "- iamopenaboutmyselftoothers\n",
+      "- ihavedifficultyexpressingmyfeelings\n",
+      "\n",
+      "26. imakefriendseasily\n",
+      "- imakefriendseasily\n",
+      "- istartconversations\n",
+      "- iwarmupquicklytoothers\n",
+      "- italktoalotofdifferentpeopleatparties\n",
+      "\n",
+      "27. iwanteverythingtobejustright\n",
+      "- iwanteverythingtobejustright\n",
+      "- iwanteverythingtoaddupperfectly\n",
+      "- idemandquality\n",
+      "- idislikeimperfectwork\n",
+      "- iexpectdedicatedworkfromothers\n",
+      "\n",
+      "28. icomeupwithboldplans\n",
+      "- icomeupwithboldplans\n",
+      "- iamfullofideas\n",
+      "- iholdbackmyopinions\n",
+      "- iturnplansintoactions\n",
+      "\n",
+      "29. ihavearichvocabulary\n",
+      "- ihavearichvocabulary\n",
+      "- iusedifficultwords\n",
+      "- ihaveapoorvocabulary\n",
+      "- ishowamasteryoflanguage\n",
+      "\n",
+      "30. iliketobeofservicetoothers\n",
+      "- iliketobeofservicetoothers\n",
+      "- iliketodothingsforothers\n",
+      "- ifeelsympathyforthosewhoareworseoffthanmyself\n",
+      "- igooutofmywayforothers\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num, top in enumerate(factors):\n",
+    "    print(str(num+1)+'. ' + top)\n",
+    "    for list_ in factors[top]:\n",
+    "        for question in list_:\n",
+    "            print('-', question)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "We've identified 30 traits after changing the correlation threshold and using this new method. Some of these traits are a little *too* narrow and specific, in my opinion -- the first one is just asking in several different ways if you're a rule-follower. But that seems to be an issue with the data and my correlation threshold -- not the methodology.\n",
+    "\n",
+    "I'll continue to gather data to improve this."
    ]
   }
  ],
